## Process this file with automake to produce Makefile.in

## Created by Anjuta

INCLUDES = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

lib_LTLIBRARIES = \
	libweathercalc.la 

libweathercalc_la_SOURCES = \
	temp.c             \
	distance.c             \
	speed.c             \
	pressure.c             \
	vp.c             \
	mix.c             \
	heatindex.c             \
	windchill.c 

libweathercalc_la_LDFLAGS = \
	-lm 
















